New damage and health system
Actually compiles now, only tried kms 5x